--- a/index.html
+++ b/index.html
@@ -3,48 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume Builder</title>
     <link rel="stylesheet" href="style.css">
+    <title>Animation6</title>
 </head>
 <body>
+    <div class="box red circle">
 
-    <div class="container">
-        <h2>Resume Builder</h2>
-        <form id="resumeForm">
-            <label for="name">Full Name:</label>
-            <input type="text" id="name" required>
-
-            <label for="name">Address:</label>
-            <input type="text" id="Address" required>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" required>
-
-            <label for="phone">Phone:</label>
-            <input type="text" id="phone" required>
-
-            <label for="Career Objective">Career Objective:</label>
-            <textarea id="Career Objective" rows="3"></textarea>
-
-            <label for="skills">Skills (comma separated):</label>
-            <input type="text" id="skills" row="3" required>
-
-            <label for="experience">Experience:</label>
-            <textarea id="experience" rows="3"></textarea>
-
-            <label for="education">Education:</label>
-            <textarea id="education" rows="3"></textarea>
-
-            <button type="button" onclick="generateResume()">Generate Resume</button>
-        </form>
-
-        <div id="resumeOutput" class="resume-preview"></div>
     </div>
-    <button type="button" onclick="generatePDF()">Download PDF</button>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="javascript.js"></script>
-
-    <script src="script.js"></script>
-
+    
+    <p>Circle के ऊपर mouse hover करें </p>
 </body>
 </html>
