--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Animation6</title>
+<title>Simple Menu Design</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="box red circle">
-
-    </div>
-    
-    <p>Circle के ऊपर mouse hover करें </p>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="articles.html">Articles</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
