--- a/index.html
+++ b/index.html
@@ -3,31 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tic-Tac-Toe Game</title>
+    <title>Color picker Game</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="msg-container hide">
-      <p id="msg">Winner</p>
-      <button id="new-btn">New Game</button>
-    </div>
-    <main>
-      <h1>Tic Tac Toe</h1>
-      <div class="container">
-        <div class="game">
-          <button class="box"></button>
-          <button class="box"></button>
-          <button class="box"></button>
-          <button class="box"></button>
-          <button class="box"></button>
-          <button class="box"></button>
-          <button class="box"></button>
-          <button class="box"></button>
-          <button class="box"></button>
-        </div>
+    <h1>color picker</h1>
+    <div class="choices">
+      <div class="choice" id="red">
+        <img src="red1.jpg" />
       </div>
-      <button id="reset-btn">Reset Game</button>
-    </main>
+      <div class="choice" id="green">
+        <img src="green3.png" />
+      </div>
+      <div class="choice" id="yallow">
+        <img src="yellow3.jpeg" />
+      </div>
+    </div>
+
+    <div class="score-board">
+      <div class="score">
+        <p id="user-score">0</p>
+        <p>You</p>
+      </div>
+      <div class="score">
+        <p id="comp-score">0</p>
+        <p>Comp</p>
+      </div>
+    </div>
+
+    <div class="msg-container">
+      <p id="msg">Play your move</p>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
