--- a/index.html
+++ b/index.html
@@ -1,39 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Color picker Game</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <h1>color picker</h1>
-    <div class="choices">
-      <div class="choice" id="red">
-        <img src="red1.jpg" />
-      </div>
-      <div class="choice" id="green">
-        <img src="green3.png" />
-      </div>
-      <div class="choice" id="yallow">
-        <img src="yellow3.jpeg" />
-      </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dynamic Dashboard</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="dashboard">
+        <aside class="sidebar">
+            <h2>Dashboard</h2>
+            <ul>
+                <li>Home</li>
+                <li>Analytics</li>
+                <li>Reports</li>
+                <li>Settings</li>
+            </ul>
+        </aside>
+        
+        <main class="content">
+            <h1>Welcome to Dynamic Dashboard</h1>
+            <canvas id="chart"></canvas> 
+            <button onclick="updateChart()">Update Chart</button>
+        </main>
     </div>
 
-    <div class="score-board">
-      <div class="score">
-        <p id="user-score">0</p>
-        <p>You</p>
-      </div>
-      <div class="score">
-        <p id="comp-score">0</p>
-        <p>Comp</p>
-      </div>
-    </div>
-
-    <div class="msg-container">
-      <p id="msg">Play your move</p>
-    </div>
-    <script src="app.js"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="script.js"></script>
+</body>
 </html>
