--- a/index.html
+++ b/index.html
@@ -1,404 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Learning HTML</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<style>
-  *{
-  margin: 0%;
-  padding: 0%;
-  font-family: sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  box-sizing: border-box;
-}
-body{
-  background-color: hwb(300 29% 67%);
-  cursor: pointer;
-  border: 1px solid red transparent;
-}
-.logo{
-  padding: 20px;
-}
-
-.nav nav{
-  width: 100%;
-  height: 50px;
-  background-color: rgb(50, 50, 66);
-  color: white;
-  align-items: center;
-  text-align: center;
-  display: flex;
-  gap: 20px;
-  cursor: pointer;
-  border: azure;
-}
-.nav nav :hover{
-  color: chartreuse;
-  -ms-zoom-animation: default;
-  border-radius: 2px;
-}
-.search{
-  width: 250px;
-  height: 24px;
-  cursor: pointer;
-  border-radius: 4px;
-}
-
-.btn{
-  height: 24px;
-  background-color: blue;
-  border-radius: 4px;
-  color: white;
-}
-button:hover{
-  color: rgb(18, 206, 59);
-  background-color: rgb(155, 82, 53);
-  
-}
-
-.text-runner {
-  width: 100%;
-  overflow: hidden;
-  white-space: nowrap;
-  box-sizing: border-box;
-}
-
-.text-runner span {
-  display: inline-block;
-  padding-left: 100%;
-  animation: scrollText 23s linear infinite;
-}
-
-@keyframes scrollText {
-  0% {
-    transform: translateX(0%);
-  }
-  100% {
-    transform: translateX(-100%);
-  }
-}
-
-.para{
-  width: 100%;
-  color: red;
-  text-align: center;
-  align-items: center;
-  background-color: rgb(208, 226, 43);
-  cursor: pointer;
-  
-  
-}
-.text-runner{
-  color: blue;
-  background-color: rgb(255, 0, 140);
-  animation: scroll;
-  cursor: pointer;
-}
-.b1{
-  display: flex;
-  padding-left: 30px;
-  padding-top: 50px;
-  justify-content: space-evenly;
-  border: 5px solid red transparent;
-  cursor: pointer;
-}
-.b1:hover{ 
-  padding: 5px 5px;
-  border: 1px solid rgb(228, 231, 6);
-  transition: 0.3s ease;
-}
-.first{
-  padding-top: 10px;
-  padding-left: 70px;
-  color: white;
-}
-.second{
-  padding-left: 70px;
-  color: white; 
-}
-.third{
-  padding-left: 70px;
-  color: white;
-}
-.color{
-  color: rgb(42, 205, 211);  
-}
-.b2:hover{ 
-  padding: 5px 5px;
-  border: 1px solid rgb(228, 231, 6);
-  transition: 0.3s ease;
-}
-
-.shape{
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  background-color: rgb(0, 247, 255);
-  background-image: url(images1.jpg.png);
-  background-position: center;
-  background-size: cover;
-}
-.shape:hover{ 
-  padding: 20px 25px;
-  border: 5px solid rgb(228, 231, 6);
-  transition: 0.3s ease;
-}
-
-.shape1{
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  background-color: rgb(0, 247, 255);
-  background-image: url(image2.png);
-  background-position: center;
-  background-size: cover;
-}
-.shape1:hover{ 
-  padding: 20px 25px;
-  border: 5px solid rgb(228, 231, 6);
-  transition: 0.3s ease;
-}
-
-.shape2{
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  background-color: rgb(0, 247, 255);
-  background-image: url(image3.png);
-  background-position: center;
-  background-size: cover;
-}
-.shape2:hover{ 
-  padding: 20px 25px;
-  border: 5px solid rgb(228, 231, 6);
-  transition: 0.3s ease;
-}
-
-.shape3{
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  background-color: rgb(0, 247, 255);
-  background-image: url(image4.png);
-  background-position: center;
-  background-size: cover;
-}
-.shape3:hover{ 
-  padding: 20px 25px;
-  border: 5px solid rgb(228, 231, 6);
-  transition: 0.3s ease;
-}
-
-.shape4{
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  background-color: rgb(0, 247, 255);
-  background-image: url(image5.png);
-  background-position: center;
-  background-size: cover;
-}
-
-.shape4:hover{ 
-  padding: 20px 25px;
-  border: 5px solid rgb(228, 231, 6);
-  transition: 0.3s ease;
-}
-.rightside{
-  width: 100%;
-  color: rgb(228, 252, 17);
-  align-items: center;
-  text-align: center;
-  padding-left: 20%;
-  padding-top: 0%;
-  padding-bottom: 1%;
-  animation: scrollText 23s linear infinite;
-  background-color: rgb(19, 15, 3);
-}
-
-.footer{
-  color: white;
-  display: flex;
-  justify-content: space-evenly;
-  padding-top: 1%;
-  background-color: rgb(37, 37, 37);
-}
-.coppy{
-  color: white;
-  align-items: center;
-  text-align: center;
-  justify-items: center;
-  font-size: small;
-  background-color: rgb(5, 5, 5);
-}
-
-
-
-.bodyhover-box {
-  padding: 10px 20px;
-  border: 2px solid transparent;
-  transition: 0.3s ease;
-}
-
-.bodyhover-box:hover {
-  border: 2px solid #007BFF; /* Blue border on hover */
-  cursor: pointer;
-}
-
-.footer:hover{
-  color: blue;
-}
-</style>
-<body>
-  <div class="nav">
-    <nav>
-      <h1 class="logo">Mywebsites!</h1>
-        <div>Home</div>
-        <div>About</div>
-        <div>Services</div>
-        <div>Profile</div>
-        <div>Contact Us</div>
-        <input class="search" type="text" placeholder="Search Services">
-        <button class="btn">Search</button>
-    </nav>  
- <hr>
-  </div>
-  <b><p class="para"><marquee behavior="scroll" direction="left">"आपकी असफलता के बारे में चिंतित रहने की बजाए उस मौके के बारे में चिंतित रहिये जिसे कोशिश किये बिना ही आपने खो दिया" 
-  .........!</marquee></p>
-  </b>
-  <hr>
-  <div class="text-runner">
-    <b><span>🚀 "नसीब/तक़दीर/भाग्य/किस्मत मेहनत का ही एक हिस्सा है, जितनी ज्यादा आप मेहनत करोगे उतने ही ज्यादा आप नसीबवाले बनते जाओगे" 
-    ........!</span></b>
-  <hr>
-  </div>
-  <div>
-    <div class="b1">
-      <div class="shape"></div>
-      <img class="ima" src="" alt="">
-      <div class="shape1"></div>
-      <img class="ima" src="" alt="">
-      <div class="shape2"></div>
-      <img class="ima" src="" alt="">
-      <div class="shape3"></div>
-      <img class="ima" src="" alt="">
-      <div class="shape4"></div>
-      <!-- Contact Form Section -->
-<div style="padding: 30px; background-color: #1a1a1a; color: white; text-align: center;">
-  <h2>Contact Me</h2>
-  <form action="#" method="post" style="max-width: 400px; margin: auto; text-align: left;">
-    <label>Name</label><br>
-    <input type="text" name="name" placeholder="Your Name" style="width: 100%; padding: 8px; margin: 5px 0;"><br>
-
-    <label>Email</label><br>
-    <input type="email" name="email" placeholder="Your Email" style="width: 100%; padding: 8px; margin: 5px 0;"><br>
-
-    <label>Message</label><br>
-    <textarea name="message" placeholder="Write your message here..." style="width: 100%; padding: 8px; margin: 5px 0;" rows="5"></textarea><br>
-
-    <button type="submit" style="background-color: blue; color: white; padding: 10px 20px; border: none; border-radius: 4px;">Send</button>
-  </form>
-</div>
-
-  </div>
-  <div class="b2">
-      <div class="first"><b>Hello,it's me</b></div>
-      <div class="second"><b>I'm a Vinod Kumar Nagoriya </b></div>
-      <div class="third"><b>And, I'm a</b> <span class="color"><b> Frontend Developer !</b></span></div>
-  </div>
-  <div class="rightside">
-    <p>"आपकी असफलता के बारे में चिंतित रहने की बजाए उस मौके के बारे में चिंतित रहिये जिसे कोशिश किये बिना ही आपने खो दिया" .........!
-    </p>
-  </div>
-    </div>    
-  </div>
-  <hr>
-  <div class="footer">
-    <div>
-      <h2>About / Description</h2>
-      <ol>
-        <li>Websites</li>
-        <li>"About Us" link</li>
-      </ol>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Tic-Tac-Toe Game</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="msg-container hide">
+      <p id="msg">Winner</p>
+      <button id="new-btn">New Game</button>
     </div>
-    <div>
-      <h2>Quick Links</h2>
-      <ol>
-        <li>Home</li>
-        <li>About</li>
-        <li>Course/Services</li>
-        <li>Contact Us</li>
-        <li>Privacy Policy</li>
-        <li>Terms & Conditions</li>
-      </ol>
-    </div>
-    <div>
-      <h2>Contact Information</h2>
-      <ol>
-        <li>Email</li>
-        <li>Phone number</li>
-        <li>Office address</li>
-        <li>Google Maps link</li>
-      </ol>
-    </div>
-    <div>
-      <h2>Social Media Icons</h2>
-      <ol>
-        <li>Facebook</li>
-        <li>Instagram</li>
-        <li>YouTube</li>
-        <li>LinkedIn</li>
-        <li>Twitter</li>
-      </ol>
-    </div>
-    <div>
-      <h2>Newsletter Subscription</h2>
-      <ol>
-        <li>Email input box for updates</li>
-      </ol>
-    </div>
-    <div>
-      <h2>Courses</h2>
-      <ol>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>Python</li>
-      </ol>
-    </div>
-  </div>
-  <div class="coppy">
-    <h2> Copyright</h2>
-    <div>
-      <li>© 2025 English Spoken with Vinod Sir. All Rights Reserved.</li>
-    </div>
-    <div class="bodyhover-box"></div>
-  </div>
-</body>
-<script>
-  document.querySelector(".btn").addEventListener("click", function() {
-    const input = document.querySelector(".search").value;
-    alert("You searched for: " + input);
-  });
-  const form = document.querySelector("form");
-  form.addEventListener("submit", function(event) {
-    event.preventDefault(); // Page reload से रोकता है
-    alert("Thank you for contacting us, " + form.name.value + "!");
-    form.reset(); // फॉर्म को खाली करता है
-  });
-  const navItems = document.querySelectorAll(".nav nav div");
-  navItems.forEach(item => {
-    item.addEventListener("mouseenter", () => {
-      item.style.color = "orange";
-    });
-    item.addEventListener("mouseleave", () => {
-      item.style.color = "white";
-    });
-  });
-  const copyRight = document.querySelector(".coppy li");
-  const year = new Date().getFullYear();
-  copyRight.textContent = `© ${year} English Spoken with Vinod Sir. All Rights Reserved.`;
-</script>
+    <main>
+      <h1>Tic Tac Toe</h1>
+      <div class="container">
+        <div class="game">
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
+        </div>
+      </div>
+      <button id="reset-btn">Reset Game</button>
+    </main>
+    <script src="app.js"></script>
+  </body>
 </html>
